# golang-cmake-example-1

./: CMakeLists.txt
